Fix floating and aligngment of date fields.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -697,16 +697,17 @@ div.panel-pane div.node.boxed {
 /* USER PROFILE STYLES */
 /***********************/
 
+.form-item {
+  width: 100%;
+
+  label {
+    display: inline-block;
+    width: 20%;
+  }
+}
+
 /* Client Edit Styles */
 .page-user-edit-bwma-client {
-
-  .form-item {
-    width: 100%;
-
-    label {
-      display: inline-block;
-    }
-  }
 
   #edit-profile-bwma-client-field-notes{
     td:not([class]) {
@@ -730,6 +731,12 @@ div.panel-pane div.node.boxed {
       }
     }
   }
+}
+
+.field-type-datetime {
+  clear: both;
+  display: inline-block;
+  width: 100%;
 }
 
 .pane-additional-identifying-info-edit {
